healthcheck/k8s/envoy/base/greet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greet-grpc
spec:
  selector:
    app: greet-grpc
  type: ClusterIP
  clusterIP: None # healess service
  ports:
  - name: greet
    protocol: TCP
    port: 50051 # no targetPort for headless service
